<resources>
    <string name="app_name">Rapid Cart</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_link_no_account">No account? Create a new one</string>
    <string name="logoDes">logo</string>
    <string name="txt_title_register">BECOME OUR MEMBER TODAY!</string>
    <string name="btn_register">Sign up</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="addProducts">Add Products</string>
    <string name="updateProducts">Update products</string>
    <string name="tvCostPrice">Cost Price</string>
    <string name="tvPrice">Price</string>
    <string name="tvInvLevel">Inventory Level</string>
    <string name="tvInvWarnLevel">Inventory Warning Level</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="update">Update</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="addToCart">Add To Cart +</string>
    <string name="tvCartTitle">Your Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="btnPlaceOrder">Place Order</string>
    <string name="backButton">Back Button Image</string>
    <string name="tvUpdateTitle">Update Product</string>
    <string name="tvAddTitle">Add Product</string>
    <string name="btnContinue">Continue</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvInfoTitle">Info</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postalCode">Postal Code</string>
    <string name="country">Country</string>
    <string name="shippingAdd">Shipping Address</string>
    <string name="cardInfo">Card Information</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiryMonth">Expiry Month</string>
    <string name="expiryYear">Expiry Year</string>
    <string name="cvvInfo">"This 3 or 4 digit code is on the back or front of your card"</string>
    <string name="cvv">CVV</string>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="orderId">Order Id:</string>
    <string name="itemsShipped">Items</string>
    <string name="status">Status:</string>
    <string name="orderDetails">Order Details</string>
    <string name="id">Id</string>
    <string name="productName">Product Name</string>
    <string name="qty">Qty</string>
    <string name="total">Total</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="changeToInProgress">Change To In Progress</string>
    <string name="changeToShipped">Change To Shipped</string>
    <string name="placeOrder">Place Order</string>
    <string name="completed">Completed</string>
</resources>
