<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Customer.PaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/tvShippingInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/cardInfo"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColorHint="@color/colorSecondaryText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cardNumber"
                android:inputType="number"
                android:textColor="@color/colorPrimaryText" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:textColorHint="@color/colorSecondaryText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiryMonth"></TextView>

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/months"
                    android:textColor="@color/colorPrimaryText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:textColorHint="@color/colorSecondaryText">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiryYear"></TextView>

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:textColorHint="@color/colorSecondaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cvv"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cvvInfo" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:padding="12dp"
            android:text="@string/btnContinue"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</RelativeLayout>